[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://meshes/cafe7.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scenes/items/BarCounter.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/items/Table.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/ItemNameUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/items/CoffeeCup.tscn" type="PackedScene" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.827451, 0, 1, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.03
height = 0.06

[sub_resource type="CylinderShape" id=3]
radius = 0.291996
height = 1.87381

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.147112, 2.05384, 4.30662 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 5.08417, 2.06446, 0.16606 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 5.16657, 2.17485, 0.147453 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.153855, 2.0608, 4.00461 )

[node name="game" type="Spatial"]

[node name="HitIndicator" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15523, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="player" type="KinematicBody" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15523, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="player"]
shape = SubResource( 3 )

[node name="Camera" type="Camera" parent="player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.544773, 0 )

[node name="RayCast" type="RayCast" parent="player/Camera"]
enabled = true
collision_mask = 2

[node name="wallright" type="StaticBody" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="wallright"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.05383, 1.9748, 0.031898 )
shape = SubResource( 4 )

[node name="wallBack" type="StaticBody" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="wallBack"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.01727, -3.97087 )
shape = SubResource( 5 )

[node name="wallFront" type="StaticBody" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="wallFront"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.92113, 4.03007 )
shape = SubResource( 6 )

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.954542, -0.127313, 0.269521, 0, 0.904198, 0.427114, -0.298078, -0.407698, 0.863094, 0, 1.93734, 2.43037 )
shadow_enabled = true
shadow_bias = -0.01

[node name="StaticBody" type="StaticBody" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.03616, 2, 0 )
visible = false
shape = SubResource( 7 )

[node name="Bar" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.21841, 0.6, -2.35388 )

[node name="Table1" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.82905, 0, -2.01792 )

[node name="Table2" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.71325, 0, 0.87656 )

[node name="Table3" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.38693, 0, 2.52426 )

[node name="ItemNameUI" parent="." instance=ExtResource( 5 )]

[node name="CoffeeCup" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.82159, 1.14892, 0.582209 )
[connection signal="rumble" from="player" to="ItemNameUI" method="_on_player_rumble"]
[connection signal="update_item_name" from="player" to="ItemNameUI" method="_on_player_update_item_name"]
